--- a/Posadas viaja/Cube.html
+++ b/Posadas viaja/Cube.html
@@ -78,6 +78,80 @@ url('fonts/') format('svg');
 }
 /*#/#*//*#i8.i73.image.css:image/base/css*/
 #i73 { opacity: 1; }
+/*#/#*//*#i73.i74.positioning.css:positioning/base/css.2*/
+#i73 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 110px; height: 25px;
+        -ms-transform: translate(0, 0) translate(95px, 156px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(95px, 156px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(95px, 156px) rotate(0deg);
+        transform: translate(0, 0) translate(95px, 156px) rotate(0deg);
+}
+/*#/#*//*#i8.i67.shape.css:shape/base/css*/
+#i67 { background-color: ; opacity: 1;
+}
+/*#/#*//*#i67.i68.positioning.css:positioning/base/css.2*/
+#i67 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+}
+/*#/#*//*#i19.i20.shape.css:shape/base/css*/
+#i20 { background-color: #ffffff; opacity: 1;
+}
+/*#/#*//*#i20.i21.positioning.css:positioning/base/css.2*/
+#i20 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
+        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        transform: translate(0, 0) translate(0, 0) rotate(0deg);
+}
+/*#/#*//*#i19.i75.image.css:image/base/css*/
+#i75 { opacity: 1; }
+/*#/#*//*#i75.i76.positioning.css:positioning/base/css.2*/
+#i75 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 300px; height: 170px;
+        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        transform: translate(0, 0) translate(0, 0) rotate(0deg);
+}
+/*#/#*//*#i19.i77.button.css:button/base/css*/
+#i77 { position: absolute; cursor: pointer; opacity: 1; background-color: #2e2d67; font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px #2e2d67; border-radius: 18px; border-color: #2e2d67; border-width: 1px; margin:-1px; border-style: solid; }
+#i77:hover { opacity: 1; background-color: rgba(0,90,140, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
+#i77:active { opacity: 1; background-color: rgba(0,80,130, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
+/*#/#*//*#i77.i78.positioning.css:positioning/base/css.2*/
+#i77 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 110px; height: 28px;
+        -ms-transform: translate(0, 0) translate(95px, 157px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(95px, 157px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(95px, 157px) rotate(0deg);
+        transform: translate(0, 0) translate(95px, 157px) rotate(0deg);
+}
+/*#/#*//*#i19.i79.image.css:image/base/css*/
+#i79 { opacity: 1; }
+/*#/#*//*#i79.i80.positioning.css:positioning/base/css.2*/
+#i79 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 114px; height: 26px;
+        -ms-transform: translate(0, 0) translate(95px, 157px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(95px, 157px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(95px, 157px) rotate(0deg);
+        transform: translate(0, 0) translate(95px, 157px) rotate(0deg);
+}
+/*#/#*//*#i19.i83.text.css:text/base/css*/
+#i83 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Gotham-Medium; font-size: 14px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i83.i84.positioning.css:positioning/base/css.2*/
+#i83 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 224px; height: 46px;
+        -ms-transform: translate(0, 0) translate(41px, 193px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(41px, 193px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(41px, 193px) rotate(0deg);
+        transform: translate(0, 0) translate(41px, 193px) rotate(0deg);
+}
+/*#/#*//*#i19.i85.image.css:image/base/css*/
+#i85 { opacity: 1; }
+/*#/#*//*#i85.i86.positioning.css:positioning/base/css.2*/
+#i85 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 35px; height: 35px;
+        -ms-transform: translate(0, 0) translate(263px, 212px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(263px, 212px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(263px, 212px) rotate(0deg);
+        transform: translate(0, 0) translate(263px, 212px) rotate(0deg);
+}
 /*#/#*//*#flexGallery.css:flexGallery/globalcss*/
 .adf-FlexGallery {
     position: absolute;
@@ -280,80 +354,6 @@ url('fonts/') format('svg');
 /*#/#*//*#visibility.css:visibility/globalcss*/
 .visibility-hidden, .visibility-hidden * {
     visibility: hidden !important;
-}
-/*#/#*//*#i73.i74.positioning.css:positioning/base/css.2*/
-#i73 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 110px; height: 25px;
-        -ms-transform: translate(0, 0) translate(95px, 156px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(95px, 156px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(95px, 156px) rotate(0deg);
-        transform: translate(0, 0) translate(95px, 156px) rotate(0deg);
-}
-/*#/#*//*#i8.i67.shape.css:shape/base/css*/
-#i67 { background-color: ; opacity: 1;
-}
-/*#/#*//*#i67.i68.positioning.css:positioning/base/css.2*/
-#i67 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
-/*#/#*//*#i19.i20.shape.css:shape/base/css*/
-#i20 { background-color: #ffffff; opacity: 1;
-}
-/*#/#*//*#i20.i21.positioning.css:positioning/base/css.2*/
-#i20 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        transform: translate(0, 0) translate(0, 0) rotate(0deg);
-}
-/*#/#*//*#i19.i75.image.css:image/base/css*/
-#i75 { opacity: 1; }
-/*#/#*//*#i75.i76.positioning.css:positioning/base/css.2*/
-#i75 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 300px; height: 170px;
-        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        transform: translate(0, 0) translate(0, 0) rotate(0deg);
-}
-/*#/#*//*#i19.i77.button.css:button/base/css*/
-#i77 { position: absolute; cursor: pointer; opacity: 1; background-color: #2e2d67; font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px #2e2d67; border-radius: 18px; border-color: #2e2d67; border-width: 1px; margin:-1px; border-style: solid; }
-#i77:hover { opacity: 1; background-color: rgba(0,90,140, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
-#i77:active { opacity: 1; background-color: rgba(0,80,130, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
-/*#/#*//*#i77.i78.positioning.css:positioning/base/css.2*/
-#i77 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 110px; height: 28px;
-        -ms-transform: translate(0, 0) translate(95px, 157px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(95px, 157px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(95px, 157px) rotate(0deg);
-        transform: translate(0, 0) translate(95px, 157px) rotate(0deg);
-}
-/*#/#*//*#i19.i79.image.css:image/base/css*/
-#i79 { opacity: 1; }
-/*#/#*//*#i79.i80.positioning.css:positioning/base/css.2*/
-#i79 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 114px; height: 26px;
-        -ms-transform: translate(0, 0) translate(95px, 157px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(95px, 157px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(95px, 157px) rotate(0deg);
-        transform: translate(0, 0) translate(95px, 157px) rotate(0deg);
-}
-/*#/#*//*#i19.i83.text.css:text/base/css*/
-#i83 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Gotham-Medium; font-size: 14px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i83.i84.positioning.css:positioning/base/css.2*/
-#i83 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 197px; height: 46px;
-        -ms-transform: translate(0, 0) translate(53px, 195px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(53px, 195px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(53px, 195px) rotate(0deg);
-        transform: translate(0, 0) translate(53px, 195px) rotate(0deg);
-}
-/*#/#*//*#i19.i85.image.css:image/base/css*/
-#i85 { opacity: 1; }
-/*#/#*//*#i85.i86.positioning.css:positioning/base/css.2*/
-#i85 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 35px; height: 35px;
-        -ms-transform: translate(0, 0) translate(263px, 212px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(263px, 212px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(263px, 212px) rotate(0deg);
-        transform: translate(0, 0) translate(263px, 212px) rotate(0deg);
 }
 /*#/#*//*#i19.i87.shape.css:shape/base/css*/
 #i87 { background-color: ; opacity: 1;
@@ -644,7 +644,7 @@ var el = document.getElementById('i67');
 
 el.addEventListener('click', function(e){
     /*#i69.i70.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.fiestamericana.com/buenasnoches/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://www.fiestamericana.com/buenasnoches/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -690,7 +690,7 @@ var el = document.getElementById('i87');
 
 el.addEventListener('click', function(e){
     /*#i89.i90.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.fiestamericana.com/buenasnoches/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.fiestamericana.com/buenasnoches/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -703,7 +703,7 @@ var el = document.getElementById('i19');
 
 el.addEventListener('click', function(e){
     /*#i54.i55.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'http://www.adform.com'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.fiestamericana.com/buenasnoches/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -736,7 +736,7 @@ var el = document.getElementById('i101');
 
 el.addEventListener('click', function(e){
     /*#i103.i104.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.fiestamericana.com/buenasnoches/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.fiestamericana.com/buenasnoches/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -749,7 +749,7 @@ var el = document.getElementById('i30');
 
 el.addEventListener('click', function(e){
     /*#i56.i57.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'http://www.adform.com'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.fiestamericana.com/buenasnoches/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -795,7 +795,7 @@ var el = document.getElementById('i41');
 
 el.addEventListener('click', function(e){
     /*#i58.i59.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'http://www.adform.com'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://www.fiestamericana.com/buenasnoches/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
