--- a/xcaret 2/Inglés/300x250/ZoomExp300x250.html
+++ b/xcaret 2/Inglés/300x250/ZoomExp300x250.html
@@ -167,7 +167,7 @@ a {text-decoration: none;}
   </ol>
 </div>
 
- <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:Arial; color:#000000; font-size:16px; text-align:left; text-decoration: none;">Planning a Romantic Surprise Trip?.Think on Mexico as the best option...</span> 
+ <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:Arial; color:#000000; font-size:16px; text-align:left; text-decoration: none;">Planning a Romantic Surprise Trip?.Think of Mexico as the best option...</span> 
                     
                    </div>
 
