--- a/xcaret 2/Inglés/Cube.html
+++ b/xcaret 2/Inglés/Cube.html
@@ -829,7 +829,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i6.i181.image.html:image/html-->
 <img id="i181" src="https://i.imgur.com/lKx4eDq.png"/>
 <!--#/#--><!--#i6.i34.text.html:text/html-->
-<div id="i34">Planning a Romantic Surprise Trip?. Think of Mexico as the best option!</div>
+<div id="i34">Planning a Romantic Surprise Trip? Think of Mexico as the best option!</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/E4VSZ2W.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
