--- a/xcaret 2/Inglés/fade-small.html
+++ b/xcaret 2/Inglés/fade-small.html
@@ -277,7 +277,7 @@
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold"> Want to disconnect from routine?. Check out these family trips to Mexico combining relax an adventure. </span></div>
+            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold"> Want to disconnect from routine? Check out these family trips to Mexico combining relax an adventure. </span></div>
 
             <!-- LOGO -->
             <div class="logo"> <img id="logo" src="https://i.imgur.com/lKx4eDq.png"></div>
