--- a/AXA/AXA/ZoomExp300x600/ZoomExp300x600.html
+++ b/AXA/AXA/ZoomExp300x600/ZoomExp300x600.html
@@ -157,7 +157,7 @@ a {text-decoration: none;}
 <div class="ism-slider" data-transition_type="zoom" data-play_type="loop" data-interval="3000" data-image_fx="zoompan" data-buttons="false" data-radios="false" id="my-slider" style="width: 300px; height: 450px; border-radius: none;">
   <ol>
     <li>
-      <img src="https://i.imgur.com/CWDXch1.png">
+      <img src="https://i.imgur.com/JDo7YO6.png">
       
     <li>
       <img src="https://i.imgur.com/ma3Pxi1.png">
