--- a/AXA/AXA/Cube.html
+++ b/AXA/AXA/Cube.html
@@ -827,7 +827,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i34.text.html:text/html-->
-<div id="i34">¿Cómo puedes prevenir situaciones inesperadas que afecten tu estabilidad?.</div>
+<div id="i34">¿Cómo puedes prevenir situaciones inesperadas que afecten tu estabilidad?</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/KI31CpB.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
