--- a/Cesantias 2/300x600/ZoomExp300x600.html
+++ b/Cesantias 2/300x600/ZoomExp300x600.html
@@ -175,7 +175,7 @@ a {text-decoration: none;}
 <div class="ism-slider" data-transition_type="zoom" data-play_type="loop" data-interval="3000" data-image_fx="zoompan" data-buttons="false" data-radios="false" id="my-slider" style="width: 300px; height: 350px; border-radius: none;">
  
  
- 	 <div style=";height:20px;text-align:left ;margin-top:320px; margin-left: 5px; position:fixed;z-index: 2;"> <img src="https://i.imgur.com/cYfrdsA.png" style="height:30px;"> </div>
+ 	 <div style=";height:20px;text-align:left ;margin-top:320px; margin-left: 5px; position:fixed;z-index: 2;"> <img src="https://i.imgur.com/sBWHxUB.png" style="height:30px;"> </div>
  
   <ol>
     <li>
@@ -193,13 +193,13 @@ a {text-decoration: none;}
  
  
 
- <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:MyriadPro-CondIt; color:#000000; font-size:26px;  text-decoration: none;">4 razones para trasladar tus cesantías al FNA.</span><br>
+ <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:MyriadPro-CondIt; color:#003386; font-size:26px;  text-decoration: none;">4 razones para trasladar tus cesantías al FNA.</span><br>
 
   
   
    
    
-    <span class=" ism_text_medium ism_text_bold" style="font-family:MyriadPro-CondIt; color:#000000; font-size:16px; text-align:left; text-decoration: none; margin-top: 0px; line-height:20pt;"><ul style="margin-left: -50px; width: 98%;">
+    <span class=" ism_text_medium ism_text_bold" style="font-family:MyriadPro-CondIt; color:#003386; font-size:16px; text-align:left; text-decoration: none; margin-top: 0px; line-height:20pt;"><ul style="margin-left: -50px; width: 98%;">
   <ol style="margin-top: -8px;">
   <li>Crédito Hipotecario.</li> 
   <li>Seguro de depósito Fogafín.</li>
