--- a/Cesantias 2/fade-small.html
+++ b/Cesantias 2/fade-small.html
@@ -75,7 +75,7 @@
         }
 
         .fadesmall .bg.cover-1 {
-            background-image: url(https://i.imgur.com/tNQymNq.png)
+            background-image: url(https://i.imgur.com/Cjoa758.png)
         }
 
         .fadesmall .bg.cover-2 {
@@ -83,7 +83,7 @@
         }
 
         .fadesmall .bg.cover-3 {
-            background-image: url(https://i.imgur.com/qkf3ZoD.png)
+            background-image: url(https://i.imgur.com/nHxvywk.png)
         }
 
         .fadesmall .bzm_cover.bzm_pos_tl {
@@ -114,7 +114,7 @@
         .fadesmall .bzm_text {
             padding: 6px 0 16px .3em;
             line-height: 1.1;
-            color: #000;
+            color: #003386;
             text-align: left;
             margin-top: 10px;
             width: 99%;
