--- a/Little Caesar/Cube.html
+++ b/Little Caesar/Cube.html
@@ -766,7 +766,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/dMUCr3T.png"/>
 <!--#/#--><!--#i5.i236.image.html:image/html-->
-<img id="i236" src="https://i.imgur.com/3PP03Dk.png"/>
+<img id="i236" src="https://i.imgur.com/yrzwO0j.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#-->
